# docs/swagger.json
@@ -373,7 +373,7 @@
                 }
             }
         },
-        "/programs": {
+        "/dropdown/programs": {
             "get": {
                 "description": "Get list of all programs for dropdown",
                 "consumes": [
@@ -396,7 +396,7 @@
                 }
             }
         },
-        "/reviewers": {
+        "/dropdown/reviewers": {
             "get": {
                 "description": "Get list of all active reviewers for reviewer selection",
                 "consumes": [
@@ -409,6 +409,70 @@
                     "dropdown"
                 ],
                 "summary": "Get all reviewers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/dropdown/subtopics": {
+            "get": {
+                "description": "Get list of subtopics for a specific topic",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dropdown"
+                ],
+                "summary": "Get subtopics by topic",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Topic ID",
+                        "name": "topic_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/dropdown/topics": {
+            "get": {
+                "description": "Get list of topics for a specific program",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dropdown"
+                ],
+                "summary": "Get topics by program",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Program ID",
+                        "name": "program_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -551,70 +615,6 @@
                     },
                     "400": {
                         "description": "Bad Request"
-                    }
-                }
-            }
-        },
-        "/subtopics": {
-            "get": {
-                "description": "Get list of subtopics for a specific topic",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dropdown"
-                ],
-                "summary": "Get subtopics by topic",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Topic ID",
-                        "name": "topic_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/topics": {
-            "get": {
-                "description": "Get list of topics for a specific program",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "dropdown"
-                ],
-                "summary": "Get topics by program",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Program ID",
-                        "name": "program_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.APIResponse"
-                        }
                     }
                 }
             }
